# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
gendiff/: __init__.py  argparse.py  cli.py  diff_builder.py  formatters.py  gen_diff.py  generate_diff.py  iteration.py  load_files.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: json_string.txt
